--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@mantine/form": "^4.1.4",
     "@mantine/hooks": "^4.1.4",
     "@mantine/next": "^4.1.4",
-    "dayjs": "^1.11.1",
     "chart.js": "^3.7.1",
     "dayjs": "^1.11.1",
     "leaflet": "^1.7.1",
+    "leaflet-geosearch": "^3.6.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-chartjs-2": "^4.1.0",
